obsync/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: obsync-api
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: obsync-web
  ports:
    - name: http
      port: 8080
      targetPort: http
