obsync/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: obsync
spec:
  hosts:
    - vault.lth.so
  gateways:
    - istio-ingress/public-gateway
  http:
    - route:
        - destination:
            host: web.obsync.svc.cluster.local
            port:
              number: 8080
